Extend the draft overview
