# backend/api/swagger.json
@@ -117,14 +117,14 @@
                         "Bearer": []
                     }
                 ],
-                "description": "Get a specific draft.",
+                "description": "Get all the running drafts for the current user.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
                     "Draft"
                 ],
-                "summary": "Get a specific draft.",
+                "summary": "Get all the running drafts for the current user.",
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -133,7 +133,7 @@
                         }
                     },
                     "400": {
-                        "description": "Missing draft id.",
+                        "description": "Body data is not correct/valid",
                         "schema": {
                             "type": "string"
                         }
@@ -144,8 +144,8 @@
                             "type": "string"
                         }
                     },
-                    "404": {
-                        "description": "No access to draft.",
+                    "403": {
+                        "description": "Thrown when anyone except the receiver tries to decline a challenge.",
                         "schema": {
                             "type": "string"
                         }
@@ -382,6 +382,64 @@
                 }
             }
         },
+        "/drafts/{id}/rounds": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get all the draft rounds of a given draft.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Draft"
+                ],
+                "summary": "Get all the draft rounds of a given draft.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Contains the id of the draft to acquire the rounds from.",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.GetDraftRounds.getDraftRoundsResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Missing draft id.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "No access to draft.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "The user provides his credentials and receives a valid JWT that can be used for authentication against the backend server.",
@@ -415,6 +473,64 @@
                     },
                     "401": {
                         "description": "Unauthorized"
+                    }
+                }
+            }
+        },
+        "/rounds/{id}/decks": {
+            "get": {
+                "security": [
+                    {
+                        "Bearer": []
+                    }
+                ],
+                "description": "Get both decks for the draft rounds.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Draft"
+                ],
+                "summary": "Get both decks for the draft rounds.",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Contains the id of the draft round.",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/api.GetDraftRoundDecks.getDraftRoundDecksResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Missing round id.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "404": {
+                        "description": "No access to draft.",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error.",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
@@ -814,7 +930,7 @@
                         "description": "Created"
                     },
                     "400": {
-                        "description": "Cannot post a request to yourself.",
+                        "description": "User with given ID is not in your friend list.",
                         "schema": {
                             "type": "string"
                         }
@@ -826,7 +942,7 @@
                         }
                     },
                     "500": {
-                        "description": "Internal Server Error",
+                        "description": "Internal Server Error.",
                         "schema": {
                             "type": "string"
                         }
@@ -1075,6 +1191,34 @@
                 }
             }
         },
+        "api.GetDraftRoundDecks.getDraftRoundDecksResponse": {
+            "type": "object",
+            "properties": {
+                "enemy_deck": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "user_deck": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "api.GetDraftRounds.getDraftRoundsResponse": {
+            "type": "object",
+            "properties": {
+                "rounds": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/model.DraftRound"
+                    }
+                }
+            }
+        },
         "api.GetDrafts.getDraftsResponse": {
             "type": "object",
             "properties": {
@@ -1302,6 +1446,39 @@
             "x-enum-varnames": [
                 "DraftModeBestOf",
                 "DraftGoalRounds"
+            ]
+        },
+        "model.DraftRound": {
+            "type": "object",
+            "properties": {
+                "draft_id": {
+                    "type": "integer"
+                },
+                "id": {
+                    "type": "integer"
+                },
+                "round_number": {
+                    "type": "integer"
+                },
+                "status": {
+                    "$ref": "#/definitions/model.DraftRoundStatus"
+                },
+                "winner_user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "model.DraftRoundStatus": {
+            "type": "string",
+            "enum": [
+                "preparation",
+                "fighting",
+                "finished"
+            ],
+            "x-enum-varnames": [
+                "DraftRoundStatusPreparation",
+                "DraftRoundStatusFighting",
+                "DraftRoundStatusFinished"
             ]
         },
         "model.DraftSettings": {
